@@ -1,4 +1,5 @@
 0.05
+ - API change: Add 'external_ids' parameter to People object.
  - Add ExternalId object.
 
 0.04 2024-06-25T19:56:28+02:00
